[gd_scene load_steps=10 format=2]

[ext_resource path="res://packs/waypoints/trappist-1/enviroments/trappist-1.tres" type="Environment" id=1]
[ext_resource path="res://assets/sfx/Loops/Ambient 70 D Atmospheric Noise.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/teaser1.4-smaller.png" type="Texture" id=3]
[ext_resource path="res://scenes/Board.gd" type="Script" id=4]
[ext_resource path="res://assets/sfx/Loops/Ambient 70 A# Machines Alive Drone.ogg" type="AudioStream" id=6]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 0, 0 )

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_texture = ExtResource( 3 )
metallic_specular = 0.0

[sub_resource type="Animation" id=3]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/0:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("DirectionalLight:light_energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DirectionalLight:light_indirect_energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Board" type="Spatial"]
script = ExtResource( 4 )

[node name="Camera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.66586, -0.332119 )
current = true
size = 50.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource( 1 )

[node name="Map" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0714874, 1.61304, 0 )

[node name="boardBacking" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0714874, 1.61304, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="TopDown" type="Camera" parent="boardBacking"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 14.7195, 0 )
projection = 1
size = 50.0

[node name="FullBoard" type="Camera" parent="boardBacking"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0.185707, 42.5362, 0.183379 )
projection = 1
size = 55.0

[node name="Perspective" type="Position3D" parent="boardBacking"]
transform = Transform( 1, 0, 0, 0, 0.969484, 0.245155, 0, -0.245155, 0.969484, 0, 4.7975, 13.5059 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="boardBacking"]
anims/fadeout = SubResource( 3 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.516546, 0.60896, 0.601953, 0.484139, -0.372134, 0.791913, 0.70625, 0.700489, -0.102596, 0, 10.1087, 0 )
visible = false
light_color = Color( 1, 0.403922, 0.2, 1 )
light_energy = 0.0
light_indirect_energy = 0.0
light_specular = 1.0
shadow_color = Color( 0.27451, 0.266667, 0.266667, 1 )
shadow_bias = 1.38

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadein = SubResource( 4 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
volume_db = -6.224
bus = "bgm"

[node name="Engine" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "bgm"

[node name="ComputerSounds" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "bgm"

[connection signal="camera_Position" from="." to="." method="_on_Board_camera_Position"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
